[tool.poetry]
name = "image-toolkit"
version = "0.1.0"
description = "Image processing tools"
authors = ["DewMaple <dew.maple@gmail.com>"]
license = "MIT"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.5.2"
opencv-contrib-python = "^4.5.2"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
